SIGA-1290 Add Redis auth/session-storage backend